Version 0.6-3 (2013-02-13)

o Minor documentation changes

Version 0.6-2 (2013-01-30)

o Reorganized print() and summary() methods for cancor()
o Smoothed out documentation
o Added observation weights to cancor() methods
o Added ability to plot X and or Y vectors in heplot.cancor()
o Extended example of plot.cancor(), showing variable vectors for X & Y

Version 0.6-1 (2013-1-23)

o Continued development of methods and plots for canonical correlation analysis within the
  HE plot framework:
o Now export scores() and scores.cancor() method
o coef.cancor gets a standardize= argument
o Added redundancy() for redundancy analysis
o Added a plot.cancor() method, visualizing the relations between the Ycan and Xcan variable scores
o Added vectors3d()
o Added heplot3d() method for cancor objects.
o More significantly, re-implemented cancor() as an S3 generic, with a cancor.formula method and 
  the original as the cancor.default method.

Version 0.6-0 (2013-1-20)

o Added cancor and related methods for canonical correlation analysis
o Added Wilks() methods for Wilks' Lambda canonical tests
o Added vectors() for drawing labeled vectors
o Added S3 heplot.cancor() method for cancor objects.

Version 0.5-23 (2012-2-3)

o Fixed buglet in summary.candisc() [thx: David Carlson, dcarlson@tamu.edu]
o heplot.candisc now uses plot.candisc in the 1 df case

Version 0.5-22 (2011-12-10)

o Extended Description:

Version 0.5-21 (2011-09-12)

o Fixed Authors@R in DESCRIPTION for R 2.14.x

Version 0.5-20 (2010-10-208)

o Updated links to datavis.ca
o Updated candisc heplot3d() examples

Version 0.5-19 (2010-7-29)

 o switched inst/CHANGES to NEWS
 o Extended candiscList and Grass examples
 o Extended package description
 o Fixed minor buglet in print.candisc

Version 0.5-18 (2010-7-27)

o  Fixed predictor.names problem with car_2.0-0
o  Added var.cex to heplot.candisc and heplot3d.candisc

Version 0.5-17 (2010-2-11)

o  Allow to select canonical dimension in plot(candisc(), which=)
